--- a/source/_posts/二开文件包含(伪协议).md
+++ b/source/_posts/二开文件包含(伪协议).md
@@ -4,7 +4,7 @@ date: '2024-4-06 15:49'
 categories: 文件包含&&伪协议
 tags: CTF
 description: php过滤器
-
+abbrlink: e4f17bd5
 ---
 
 https://blog.csdn.net/qq_44657899/article/details/109300335
